--- a/bus/Handle_Bus_Network.ipynb
+++ b/bus/Handle_Bus_Network.ipynb
@@ -1460,9 +1460,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\envs\\py39geo\\lib\\site-packages\\pandas\\core\\dtypes\\cast.py:122: ShapelyDeprecationWarning: The array interface is deprecated and will no longer work in Shapely 2.0. Convert the '.coords' to a numpy array instead.\n",
+      "  arr = construct_1d_object_array_from_listlike(values)\n",
+      "C:\\Users\\e0751551\\AppData\\Local\\Temp\\ipykernel_4356\\667753958.py:12: UserWarning: Column names longer than 10 characters will be truncated when saved to ESRI Shapefile.\n",
+      "  node_list_shp.to_file(node_path)\n"
+     ]
+    }
+   ],
    "source": [
     "node_path = r'processed_data/graph_2022-10-20/node_list.csv'\n",
     "edge_path = r'processed_data/graph_2022-10-20/edge_list_space_l.csv'\n",
@@ -1477,27 +1488,6 @@
     "\n",
     "node_list_shp.to_file(node_path)\n",
     "edge_list_shp.to_file(edge_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'processed_data/graph_2022-10-20/edge_list_shp_space_p'"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "node_path\n",
-    "edge_path"
    ]
   }
  ],
