--- a/bus/Handle_Bus_Network.ipynb
+++ b/bus/Handle_Bus_Network.ipynb
@@ -1262,6 +1262,98 @@
     "    \n",
     "    # print(len(net.nodes), len(net.edges))\n",
     "    return net\n",
+    "# =============================================================================================\n",
+    "\n",
+    "\n",
+    "# A general format function\n",
+    "def route_to_graph(data, line_col, node_col, seq_col, space='p_space'):\n",
+    "    '''\n",
+    "    transform the transport route (pandas.DataFrame) into unweighted directed graph (networkx.DiGraph)\n",
+    "    note that 'line_col' colume is to indicate the directed line, \n",
+    "    'line_col' value of the same line for different direction must be different\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data (pandas.DataFrame): \n",
+    "        the data store the line route information\n",
+    "    line_col (str): \n",
+    "        the column name indicating the tranport line\n",
+    "    node_col (str): \n",
+    "        the column name indicating the node (station) id \n",
+    "    seq_col (str): \n",
+    "        the column name indicating the sequence number of nodes in a line\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    net : networkx.DiGraph\n",
+    "        Directed bus networks\n",
+    "    '''\n",
+    "    net = nx.DiGraph()\n",
+    "    \n",
+    "    # node_line = data[[line_col, 'city_id', 'city']]\n",
+    "    line_node = data.drop_duplicates(subset=[line_col, node_col], keep='first')\n",
+    "    \n",
+    "    for node_name, node in line_node.groupby(by=node_col):\n",
+    "        net.add_node(node_name, attr = {\n",
+    "                     'line_count' : node.shape[0],\n",
+    "                     'line_list'  : ','.join(node[line_col].to_list()) \n",
+    "                     }  )\n",
+    "        # print(net.nodes.data())\n",
+    "    \n",
+    "    for line_name, line_route in data.groupby(by=line_col):\n",
+    "        \n",
+    "        line_route = line_route.sort_values(by=seq_col)\n",
+    "        line_route = line_route.reset_index(drop=True)\n",
+    "        \n",
+    "        if space == 'p_space':\n",
+    "        \n",
+    "            for i in range(line_route.shape[0]-1):\n",
+    "                for j in range(i+1, line_route.shape[0]):\n",
+    "\n",
+    "                    start_node = line_route.loc[i, node_col]\n",
+    "                    end_node   = line_route.loc[j, node_col]\n",
+    "\n",
+    "                    # a new edge between two stop node\n",
+    "                    if not net.has_edge(start_node, end_node):\n",
+    "                        net.add_edge(start_node, end_node)\n",
+    "                        net.edges[start_node, end_node]['station_list'] = [line_name]\n",
+    "\n",
+    "                    # already existing route\n",
+    "                    else:\n",
+    "                        station_list = net.edges[start_node, end_node]['station_list']\n",
+    "\n",
+    "                        if not (line_name in station_list):\n",
+    "                            station_list.append(line_name)\n",
+    "                            net.edges[start_node, end_node]['station_list'] = station_list\n",
+    "        # --------------------------------------------------------------------\n",
+    "        if space == 'l_space':\n",
+    "                     \n",
+    "            for i in range(line_route.shape[0]-1):\n",
+    "\n",
+    "                start_node = line_route.loc[i,  node_col]\n",
+    "                end_node   = line_route.loc[i+1, node_col]\n",
+    "\n",
+    "                # a new edge between two stop node\n",
+    "                if not net.has_edge(start_node, end_node):\n",
+    "                    net.add_edge(start_node, end_node)\n",
+    "                    net.edges[start_node, end_node]['station_list'] = [line_name]\n",
+    "\n",
+    "                # already existing route\n",
+    "                else:\n",
+    "                    station_list = net.edges[start_node, end_node]['station_list']\n",
+    "\n",
+    "                    if not (line_name in station_list):\n",
+    "                        station_list.append(line_name)\n",
+    "                        net.edges[start_node, end_node]['station_list'] = station_list\n",
+    "        # --------------------------------------------------------------------\n",
+    "    \n",
+    "    # updata edge attributes: \"serv_li\", \"serv_no\"\n",
+    "    for edge in net.edges():\n",
+    "        net.edges[edge]['station_count'] = len(net.edges[edge]['station_list'])\n",
+    "        net.edges[edge]['station_list']  = ','.join(net.edges[edge]['station_list'])\n",
+    "    \n",
+    "    # print(len(net.nodes), len(net.edges))\n",
+    "    return net\n",
     "# ============================================================================================="
    ]
   },
