--- a/Singapore/metro/construction_metro_network.ipynb
+++ b/Singapore/metro/construction_metro_network.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-19T06:05:49.089161Z",
-     "start_time": "2024-07-19T06:05:49.081232Z"
+     "end_time": "2024-07-19T06:25:09.896160Z",
+     "start_time": "2024-07-19T06:25:09.883216Z"
     }
    },
    "source": [
@@ -15,13 +15,13 @@
     "import pandas as pd"
    ],
    "outputs": [],
-   "execution_count": 122
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T06:06:06.207546Z",
-     "start_time": "2024-07-19T06:06:06.164090Z"
+     "end_time": "2024-07-19T06:25:10.268909Z",
+     "start_time": "2024-07-19T06:25:10.248004Z"
     }
    },
    "cell_type": "code",
@@ -96,7 +96,21 @@
     "    data = data.query('operation_state == \"in operation\"')\n",
     "    \n",
     "    return data\n",
-    "# ======================================================================================\n",
+    "# ======================================================================================"
+   ],
+   "id": "277816d80fecf515",
+   "outputs": [],
+   "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-19T06:25:10.786583Z",
+     "start_time": "2024-07-19T06:25:10.770653Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "def load_all_station_info(excel_path):\n",
     "    '''\n",
     "    the station_id\n",
@@ -110,93 +124,61 @@
     "        'Station Name'  : 'stn_name',\n",
     "        'Opening Date'  : 'open_dt',\n",
     "        'Closed Date'   : 'close_dt' }\n",
-    "    \n",
+    "\n",
     "    station_li = []\n",
-    "    \n",
+    "\n",
     "    for sheet_name in line_info['sheet_name'].unique().tolist():\n",
     "        # load station list\n",
     "        station = pd.read_excel(excel_path, sheet_name=sheet_name) \\\n",
-    "                    .rename(columns=rename_dict) \\\n",
-    "                    .assign(line_code = sheet_name)\n",
-    "        \n",
+    "            .rename(columns=rename_dict) \\\n",
+    "            .assign(line_code = sheet_name)\n",
+    "\n",
     "        # extract in-operation stations\n",
     "        station = extract_in_operation_metro_line(\n",
-    "                station,\n",
-    "                opening_col = 'open_dt', closed_col = 'close_dt',\n",
-    "                uncompleted_str = 'u/c',\n",
-    "                current_date = 'now') \\\n",
-    "        \n",
+    "            station,\n",
+    "            opening_col = 'open_dt', closed_col = 'close_dt',\n",
+    "            uncompleted_str = 'u/c',\n",
+    "            current_date = 'now')\n",
+    "\n",
     "        station_li.append(station)\n",
     "\n",
     "    station = pd.concat(station_li, axis=0, ignore_index=True)\n",
-    "    \n",
+    "\n",
     "    return station"
    ],
-   "id": "277816d80fecf515",
+   "id": "8e7e530e45b11666",
    "outputs": [],
-   "execution_count": 124
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-19T06:06:23.840414Z",
-     "start_time": "2024-07-19T06:06:22.631053Z"
+     "end_time": "2024-07-19T06:25:12.705468Z",
+     "start_time": "2024-07-19T06:25:11.291687Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "excel_path = r'Singapore/metro/station_line_list/station_list.xlsx'\n",
+    "excel_path = r'station_line_list/station_list.xlsx'\n",
     "line_info = pd.read_excel(excel_path, sheet_name='line_info')\n",
     "\n",
     "station = load_all_station_info(excel_path) \\\n",
+    "            .assign(stn_name = lambda x : x['stn_name'].str.strip())\n",
     "\n",
     "station_transfer = station \\\n",
-    "    .assign(stn_name = lambda x : x['stn_name'].str.strip()) \\\n",
     "    .groupby('stn_name', as_index=False) \\\n",
-    "    .agg(stn_code = ('stn_code', lambda x : '-'.join(list(set(x)))), \n",
+    "    .agg(joint_stn_code = ('stn_code', lambda x : '-'.join(list(set(x)))), \n",
     "         line_number = ('stn_code', 'count')) \\\n",
     "    .query('line_number > 1') \\\n",
-    "    .drop_duplicates()\n",
-    "    # .merge(station[['order', 'stn_name', 'stn_code', 'line_name', 'line_code']], on='stn_name', how='left') \\\n",
-    "    # .sort_values(['line_code', 'order'])"
+    "    .drop_duplicates() \\\n",
+    "    .merge(station[['stn_name', 'stn_code', 'order', 'line_name', 'line_code', 'open_dt']], on='stn_name', how='left') \\\n",
+    "    .sort_values(['stn_name', 'open_dt'])\n",
+    "\n",
+    "station_transfer.to_csv('station_line_list/transfer_station.csv', index=False)"
    ],
    "id": "c64fac011c258640",
    "outputs": [],
-   "execution_count": 126
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-19T06:06:42.920843Z",
-     "start_time": "2024-07-19T06:06:42.907966Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "station_transfer.to_csv('transfer_station.csv')",
-   "id": "2a23b1bfeca464",
-   "outputs": [],
-   "execution_count": 127
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-07-19T04:12:15.851283Z",
-     "start_time": "2024-07-19T04:12:15.839369Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "d5558b7d262d8402",
-   "outputs": [],
-   "execution_count": 62
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "eade93c88423c41e"
+   "execution_count": 24
   }
  ],
  "metadata": {
