--- a/codes/request_station_location.ipynb
+++ b/codes/request_station_location.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-30T12:22:39.095947Z",
-     "start_time": "2024-08-30T12:22:39.079923Z"
+     "end_time": "2024-09-03T02:34:51.246459Z",
+     "start_time": "2024-09-03T02:34:51.238822Z"
     }
    },
    "source": [
@@ -20,13 +20,78 @@
     "import pandas as pd"
    ],
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# 1. Request station location",
+   "id": "f78bb888f81b67ce"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T12:22:43.170551Z",
-     "start_time": "2024-08-30T12:22:40.373815Z"
+     "end_time": "2024-09-03T02:34:51.746834Z",
+     "start_time": "2024-09-03T02:34:51.735334Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "def request_metro_station_location(data, city, key):\n",
+    "    \n",
+    "    from utils.request_data import geocoding\n",
+    "\n",
+    "    all_res = []\n",
+    "    \n",
+    "    for ix, row in tqdm.tqdm(data.iterrows()):\n",
+    "        \n",
+    "        ln = row['line_name_zh']\n",
+    "        sn = row['name_zh']\n",
+    "        \n",
+    "        # search value\n",
+    "        search_value = f'{city}{sn}(地铁站)'\n",
+    "    \n",
+    "        # request result\n",
+    "        time.sleep(0.05)\n",
+    "        req_res = geocoding(search_value, city=city, key=key)\n",
+    "        \n",
+    "        # request matching\n",
+    "        for res in req_res:\n",
+    "            \n",
+    "            # successfully matching\n",
+    "            if (res['level'] == '公交地铁站点') and (f'{sn}(地铁站)' in res['formatted_address']):\n",
+    "                \n",
+    "                final_res = res\n",
+    "                # additional information\n",
+    "                final_res.update({\n",
+    "                    'line_name_zh' : ln,\n",
+    "                    'name_zh'      : sn,\n",
+    "                    'name'         : row['name'],\n",
+    "                    'line_name'    : row['line_name']})\n",
+    "                \n",
+    "                all_res.append(copy.deepcopy(final_res))\n",
+    "                \n",
+    "                break\n",
+    "    \n",
+    "    res = pd.DataFrame(all_res)\n",
+    "    \n",
+    "    return res"
+   ],
+   "id": "1a1d025945137c13",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### (1) Read station list",
+   "id": "2b07a00853b42177"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-02T12:53:07.830657Z",
+     "start_time": "2024-09-02T12:53:05.528552Z"
     }
    },
    "cell_type": "code",
@@ -40,9 +105,8 @@
     "\n",
     "\n",
     "# load metro station list\n",
-    "path = Path.cwd().parent / 'Suzhou/metro_network_suzhou.xlsx'\n",
-    "data = load_metro_station_list(path, time_status='current')\n",
-    "data"
+    "# path = Path.cwd().parent / 'Suzhou/metro_network_suzhou.xlsx'\n",
+    "# data = load_metro_station_list(path, time_status='current')"
    ],
    "id": "db6c3c65c510953d",
    "outputs": [
@@ -50,234 +114,68 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading data: 22it [00:02, 10.30it/s]\n",
-      "Loading data: 8it [00:00, 17.36it/s]\n"
+      "Loading data: 22it [00:01, 11.65it/s]\n"
+     ]
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### (2) Request station location",
+   "id": "751a546320e37fc0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "519it [08:44,  1.01s/it]"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "     no                   name name_zh  cumulative_distance  station_spacing  \\\n",
-       "0     1                   Mudu      木渎                 0.00             0.00   \n",
-       "1     2             Jinfeng Lu     金枫路                 1.14             1.14   \n",
-       "2     3               Fenhu Lu     汾湖路                 2.34             1.20   \n",
-       "3     4              Yushan Lu     玉山路                 3.44             1.10   \n",
-       "4     5              Shizishan     狮子山                 4.68             1.24   \n",
-       "..   ..                    ...     ...                  ...              ...   \n",
-       "222  24                  Lujia      菉葭                  NaN              NaN   \n",
-       "223  25  Huaqiao Bolanzhongxin  花桥博览中心                  NaN              NaN   \n",
-       "224  26                 Jishan      集善                  NaN              NaN   \n",
-       "225  27          Huaxigongyuan    花溪公园                  NaN              NaN   \n",
-       "226  28                Huaqiao      花桥                  NaN              NaN   \n",
-       "\n",
-       "    opening_date  line_name line_name_zh line_color  line_cycle  \n",
-       "0     2012-04-28        NaN          1号线    #78BE20       False  \n",
-       "1     2012-04-28        NaN          1号线    #78BE20       False  \n",
-       "2     2012-04-28        NaN          1号线    #78BE20       False  \n",
-       "3     2012-04-28        NaN          1号线    #78BE20       False  \n",
-       "4     2012-04-28        NaN          1号线    #78BE20       False  \n",
-       "..           ...        ...          ...        ...         ...  \n",
-       "222   2023-06-24        NaN         11号线    #F1C6A6       False  \n",
-       "223   2023-06-24        NaN         11号线    #F1C6A6       False  \n",
-       "224   2023-06-24        NaN         11号线    #F1C6A6       False  \n",
-       "225   2023-06-24        NaN         11号线    #F1C6A6       False  \n",
-       "226   2023-06-24        NaN         11号线    #F1C6A6       False  \n",
-       "\n",
-       "[227 rows x 10 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>no</th>\n",
-       "      <th>name</th>\n",
-       "      <th>name_zh</th>\n",
-       "      <th>cumulative_distance</th>\n",
-       "      <th>station_spacing</th>\n",
-       "      <th>opening_date</th>\n",
-       "      <th>line_name</th>\n",
-       "      <th>line_name_zh</th>\n",
-       "      <th>line_color</th>\n",
-       "      <th>line_cycle</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Mudu</td>\n",
-       "      <td>木渎</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2012-04-28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1号线</td>\n",
-       "      <td>#78BE20</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Jinfeng Lu</td>\n",
-       "      <td>金枫路</td>\n",
-       "      <td>1.14</td>\n",
-       "      <td>1.14</td>\n",
-       "      <td>2012-04-28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1号线</td>\n",
-       "      <td>#78BE20</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Fenhu Lu</td>\n",
-       "      <td>汾湖路</td>\n",
-       "      <td>2.34</td>\n",
-       "      <td>1.20</td>\n",
-       "      <td>2012-04-28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1号线</td>\n",
-       "      <td>#78BE20</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Yushan Lu</td>\n",
-       "      <td>玉山路</td>\n",
-       "      <td>3.44</td>\n",
-       "      <td>1.10</td>\n",
-       "      <td>2012-04-28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1号线</td>\n",
-       "      <td>#78BE20</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Shizishan</td>\n",
-       "      <td>狮子山</td>\n",
-       "      <td>4.68</td>\n",
-       "      <td>1.24</td>\n",
-       "      <td>2012-04-28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1号线</td>\n",
-       "      <td>#78BE20</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>222</th>\n",
-       "      <td>24</td>\n",
-       "      <td>Lujia</td>\n",
-       "      <td>菉葭</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-06-24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11号线</td>\n",
-       "      <td>#F1C6A6</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>223</th>\n",
-       "      <td>25</td>\n",
-       "      <td>Huaqiao Bolanzhongxin</td>\n",
-       "      <td>花桥博览中心</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-06-24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11号线</td>\n",
-       "      <td>#F1C6A6</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>224</th>\n",
-       "      <td>26</td>\n",
-       "      <td>Jishan</td>\n",
-       "      <td>集善</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-06-24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11号线</td>\n",
-       "      <td>#F1C6A6</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>225</th>\n",
-       "      <td>27</td>\n",
-       "      <td>Huaxigongyuan</td>\n",
-       "      <td>花溪公园</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-06-24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11号线</td>\n",
-       "      <td>#F1C6A6</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>226</th>\n",
-       "      <td>28</td>\n",
-       "      <td>Huaqiao</td>\n",
-       "      <td>花桥</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-06-24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11号线</td>\n",
-       "      <td>#F1C6A6</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>227 rows × 10 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of data: (519, 10)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 4,
+   "source": [
+    "key = 'd53f9929db781a22f5710539218ce798'\n",
+    "\n",
+    "city = '上海市'\n",
+    "res = request_metro_station_location(data, city, key)\n",
+    "print('Shape of data:', data.shape)\n",
+    "\n",
+    "res.to_csv('station_location_gcj02_shanghai.csv', index=False)\n",
+    "\n",
+    "\n",
+    "# city = '江苏省苏州市'\n",
+    "# res = request_metro_station_location(data, city, key)\n",
+    "# print('Shape of data:', data.shape)\n",
+    "# \n",
+    "# res.to_csv('station_location_gcj02_suzhou.csv', index=False)"
+   ],
+   "id": "b0bc11ef8aeb8b70"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T12:13:57.708260Z",
-     "start_time": "2024-08-30T12:10:18.825675Z"
+     "end_time": "2024-09-03T02:34:58.116963Z",
+     "start_time": "2024-09-03T02:34:56.983885Z"
     }
    },
    "cell_type": "code",
@@ -285,62 +183,136 @@
     "from utils.request_data import geocoding\n",
     "\n",
     "key = 'd53f9929db781a22f5710539218ce798'\n",
-    "city = '江苏省苏州市'\n",
+    "city = '苏州市'\n",
+    "sn = '苏州新区火车站(地铁站)'\n",
     "\n",
-    "all_res = []\n",
+    "search_value = f'{city}{sn}'\n",
+    "print(search_value)\n",
     "\n",
-    "for ix, row in tqdm.tqdm(data.iterrows()):\n",
-    "\n",
-    "    ln = row['line_name_zh']\n",
-    "    sn = row['name_zh']\n",
-    "    \n",
-    "    search_value = f'{city}{sn}(地铁站)'\n",
-    "\n",
-    "    # request result\n",
-    "    time.sleep(0.05)\n",
-    "    req_res = geocoding(search_value, city=city, key=key)\n",
-    "\n",
-    "    for res in req_res:\n",
-    "        if res['level'] == '公交地铁站点':\n",
-    "            final_res = res\n",
-    "    else:\n",
-    "        final_res = req_res[0]\n",
-    "\n",
-    "    # additional information\n",
-    "    final_res.update({\n",
-    "        'line_name_zh' : ln,\n",
-    "        'name_zh'      : sn,\n",
-    "        'name'         : row['name'],\n",
-    "        'line_name'    : row['line_name']})\n",
-    "\n",
-    "    all_res.append(copy.deepcopy(final_res))\n",
-    "\n",
-    "res = pd.DataFrame(all_res) "
+    "geocoding(search_value, city=city, key=key)"
    ],
-   "id": "b0bc11ef8aeb8b70",
+   "id": "18c4764fb0be6d80",
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "227it [03:38,  1.04it/s]\n"
+      "苏州市苏州新区火车站(地铁站)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'search_value': '苏州市苏州新区火车站(地铁站)',\n",
+       "  'formatted_address': '江苏省苏州市虎丘区苏州新区火车站(地铁站)',\n",
+       "  'country': '中国',\n",
+       "  'province': '江苏省',\n",
+       "  'city': '苏州市',\n",
+       "  'citycode': '0512',\n",
+       "  'district': '虎丘区',\n",
+       "  'adcode': '320505',\n",
+       "  'location': '120.525106,31.372573',\n",
+       "  'level': '公交地铁站点'}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 14
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# 2. Update station location information",
+   "id": "451c61f56d734ca0"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-30T12:13:57.739131Z",
-     "start_time": "2024-08-30T12:13:57.714180Z"
+     "end_time": "2024-09-02T13:27:35.297347Z",
+     "start_time": "2024-09-02T13:27:35.286912Z"
     }
    },
    "cell_type": "code",
-   "source": "res.to_csv('station_location_gcj02_suzhou.csv')",
-   "id": "ee099f1621e422f3",
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "import pandas as pd\n",
+    "import geopandas as gpd"
+   ],
+   "id": "27c6b3316107792a",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 7
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-02T13:27:35.871628Z",
+     "start_time": "2024-09-02T13:27:35.855175Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "city = 'shanghai'\n",
+    "data_folder = Path.cwd().parent / city\n",
+    "\n",
+    "# excel file\n",
+    "excel_path = data_folder / f'metro_network_{city}.xlsx'\n",
+    "\n",
+    "\n",
+    "# location information\n",
+    "path = data_folder / f'station_location_gcj02_{city}.csv'\n",
+    "loc = pd.read_csv(path)[['location', 'line_name', 'name']] \\\n",
+    "        .rename(columns={'location':'location_gcj02'})"
+   ],
+   "id": "b2912aa0984ec11f",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-02T13:27:44.534416Z",
+     "start_time": "2024-09-02T13:27:43.547453Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# load all excel data\n",
+    "data_all = pd.read_excel(excel_path, sheet_name=None)\n",
+    "# line info\n",
+    "line_info = data_all['line_info']\n",
+    "\n",
+    "sheet_name_li = line_info['sheet_name'].tolist()\n",
+    "\n",
+    "with pd.ExcelWriter(excel_path, mode='a', if_sheet_exists='replace') as writer:\n",
+    "    \n",
+    "    for sheet_name in sheet_name_li:\n",
+    "        \n",
+    "        data = data_all[sheet_name] \\\n",
+    "                .assign(sheet_name=sheet_name) \\\n",
+    "                .merge(line_info[['sheet_name', 'line_name', 'line_name_zh']], on='sheet_name', how='left', validate='many_to_one')\n",
+    "        \n",
+    "        # merge location information\n",
+    "        data = data.merge(loc, on=['line_name', 'name'], how='left', validate='one_to_one') \\\n",
+    "                   .drop(columns=['sheet_name', 'line_name', 'line_name_zh'], axis=1)\n",
+    "        \n",
+    "        # update sheet \n",
+    "        data.to_excel(writer, index=False, sheet_name=sheet_name)"
+   ],
+   "id": "52357e1dae0e80d0",
+   "outputs": [],
+   "execution_count": 9
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "9293435f2c5b9ad1"
   }
  ],
  "metadata": {
