--- a/codes/request_station_location.ipynb
+++ b/codes/request_station_location.ipynb
@@ -174,8 +174,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-03T02:34:58.116963Z",
-     "start_time": "2024-09-03T02:34:56.983885Z"
+     "end_time": "2024-09-03T10:33:42.419624Z",
+     "start_time": "2024-09-03T10:33:41.459302Z"
     }
    },
    "cell_type": "code",
@@ -184,7 +184,7 @@
     "\n",
     "key = 'd53f9929db781a22f5710539218ce798'\n",
     "city = '苏州市'\n",
-    "sn = '苏州新区火车站(地铁站)'\n",
+    "sn = '金鸡墩(地铁站)'\n",
     "\n",
     "search_value = f'{city}{sn}'\n",
     "print(search_value)\n",
@@ -197,30 +197,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "苏州市苏州新区火车站(地铁站)\n"
+      "苏州市金鸡墩(地铁站)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[{'search_value': '苏州市苏州新区火车站(地铁站)',\n",
-       "  'formatted_address': '江苏省苏州市虎丘区苏州新区火车站(地铁站)',\n",
+       "[{'search_value': '苏州市金鸡墩(地铁站)',\n",
+       "  'formatted_address': '江苏省苏州市姑苏区金鸡墩(地铁站)',\n",
        "  'country': '中国',\n",
        "  'province': '江苏省',\n",
        "  'city': '苏州市',\n",
        "  'citycode': '0512',\n",
-       "  'district': '虎丘区',\n",
-       "  'adcode': '320505',\n",
-       "  'location': '120.525106,31.372573',\n",
+       "  'district': '姑苏区',\n",
+       "  'adcode': '320508',\n",
+       "  'location': '120.567781,31.333255',\n",
        "  'level': '公交地铁站点'}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 2
   },
   {
    "metadata": {},
