--- a/codes/metro_create_graph.ipynb
+++ b/codes/metro_create_graph.ipynb
@@ -13,11 +13,6 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "import tqdm\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import geopandas as gpd\n",
-    "\n",
     "import networkx as nx\n",
     "\n",
     "import matplotlib.pyplot as plt"
@@ -42,7 +37,7 @@
    "source": [
     "def load_dataset(city):\n",
     "\n",
-    "    from utils.load_data import load_metro_station_list\n",
+    "    from codes.utils.load_data.load_data_metro import load_metro_station_list\n",
     "\n",
     "    data_folder = Path.cwd().parent / city\n",
     "\n",
@@ -1196,7 +1191,8 @@
    "cell_type": "code",
    "source": [
     "# add distance attributes for edges\n",
-    "from math import radians, degrees, sin, cos, asin, acos, sqrt\n",
+    "from math import radians, sin, cos, acos\n",
+    "\n",
     "\n",
     "def great_circle(lon1, lat1, lon2, lat2):\n",
     "    lon1, lat1, lon2, lat2 = map(radians, [lon1, lat1, lon2, lat2])\n",
@@ -1261,7 +1257,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from codes.utils.plot_metro_network import plot_geographical_graph_edge\n",
+    "from codes.utils.plot.plot_metro_network import plot_geographical_graph_edge\n",
     "\n",
     "# plot geographical graph\n",
     "fig, ax = plt.subplots(1, 1, figsize=(10, 6))\n",
