--- a/codes/plot_metro_network.ipynb
+++ b/codes/plot_metro_network.ipynb
@@ -11,17 +11,13 @@
     }
    },
    "source": [
-    "import re\n",
+    "\n",
     "from pathlib import Path\n",
     "\n",
-    "import tqdm\n",
-    "import pandas as pd\n",
     "import geopandas as gpd\n",
     "\n",
-    "import networkx as nx\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
-    "import scienceplots\n",
+    "\n",
     "plt.style.use(['default', 'science', 'no-latex'])"
    ],
    "outputs": [],
@@ -38,7 +34,7 @@
    "source": [
     "def load_dataset(city):\n",
     "    \n",
-    "    from utils.load_data import load_metro_station_list\n",
+    "    from codes.utils.load_data.load_data_metro import load_metro_station_list\n",
     "    \n",
     "    data_folder = Path.cwd().parent / city\n",
     "    \n",
@@ -117,7 +113,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from codes.utils.plot_metro_network import (\n",
+    "from codes.utils.plot.plot_metro_network import (\n",
     "    plot_metro_network_integrate_from_dataframe,\n",
     "    plot_metro_network_separate_from_dataframe)\n",
     "\n",
