--- a/codes/request_station_location.ipynb
+++ b/codes/request_station_location.ipynb
@@ -16,8 +16,7 @@
     "\n",
     "from pathlib import Path\n",
     "\n",
-    "import tqdm\n",
-    "import pandas as pd"
+    "import tqdm"
    ],
    "outputs": [],
    "execution_count": 2
@@ -39,7 +38,7 @@
    "source": [
     "def request_metro_station_location(data, city, key):\n",
     "    \n",
-    "    from utils.request_data import geocoding\n",
+    "    from codes.utils.request_data.request_data_amap import geocoding\n",
     "\n",
     "    all_res = []\n",
     "    \n",
@@ -96,7 +95,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from utils.load_data import load_metro_station_list\n",
+    "from codes.utils.load_data.load_data_metro import load_metro_station_list\n",
     "\n",
     "\n",
     "# load metro station list\n",
@@ -180,7 +179,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from utils.request_data import geocoding\n",
+    "from codes.utils.request_data.request_data_amap import geocoding\n",
     "\n",
     "key = 'd53f9929db781a22f5710539218ce798'\n",
     "city = '苏州市'\n",
@@ -239,8 +238,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "import pandas as pd\n",
-    "import geopandas as gpd"
+    "import pandas as pd"
    ],
    "id": "27c6b3316107792a",
    "outputs": [],
