--- a/codes/Tutorial - request station location from Amap.ipynb
+++ b/codes/Tutorial - request station location from Amap.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-03T02:34:51.246459Z",
-     "start_time": "2024-09-03T02:34:51.238822Z"
+     "end_time": "2024-09-20T08:36:29.906549Z",
+     "start_time": "2024-09-20T08:36:29.856824Z"
     }
    },
    "source": [
@@ -16,10 +16,11 @@
     "\n",
     "from pathlib import Path\n",
     "\n",
-    "import tqdm"
+    "import tqdm\n",
+    "from codes.utils.request_data.amap_token import access_token"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -153,7 +154,7 @@
    ],
    "execution_count": 4,
    "source": [
-    "key = 'd53f9929db781a22f5710539218ce798'\n",
+    "key = access_token\n",
     "\n",
     "city = '上海市'\n",
     "res = request_metro_station_location(data, city, key)\n",
@@ -181,7 +182,7 @@
    "source": [
     "from codes.utils.request_data.request_data_amap import geocoding\n",
     "\n",
-    "key = 'd53f9929db781a22f5710539218ce798'\n",
+    "key = access_token\n",
     "city = '苏州市'\n",
     "sn = '金鸡墩(地铁站)'\n",
     "\n",
