--- a/codes/metro_create_graph.ipynb
+++ b/codes/metro_create_graph.ipynb
@@ -1046,7 +1046,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from codes.utils.create_graph import (\n",
+    "from codes.utils.graph_network.create_graph import (\n",
     "    graph_add_nodes_from_dataframe, \n",
     "    graph_add_edges_l_sapce_from_dataframe, \n",
     "    graph_add_edges_p_sapce_from_dataframe)\n",
@@ -1121,8 +1121,8 @@
    },
    "cell_type": "code",
    "source": [
-    "from codes.utils.create_graph import create_graph_from_dataframe, graph_add_transfer_edges_from_dataframe\n",
-    "from codes.utils.graph_statistic import print_graph_basic_information\n",
+    "from codes.utils.graph_network.create_graph import create_graph_from_dataframe, graph_add_transfer_edges_from_dataframe\n",
+    "from codes.utils.graph_network.graph_statistic import print_graph_basic_information\n",
     "\n",
     "\n",
     "graph = create_graph_from_dataframe(\n",
